Theme toggle positioning

--- a/distance.html
+++ b/distance.html
@@ -15,10 +15,7 @@
 <body>
   <nav class="site-nav">
     <a href="index.html" class="nav-logo">will + jolene</a>
-    <div class="nav-right">
-      <button type="button" id="themeToggle" class="nav-theme-btn" aria-label="Switch to dark mode" title="Dark mode"><i class="bi bi-moon-fill"></i></button>
-      <button type="button" class="nav-toggle" id="navToggle" aria-label="Toggle menu"><i class="bi bi-list"></i></button>
-    </div>
+    <button type="button" class="nav-toggle" id="navToggle" aria-label="Toggle menu"><i class="bi bi-list"></i></button>
     <div class="nav-links" id="navLinks">
       <a href="messages.html">messages</a>
       <a href="lifts.html">lifts</a>
@@ -30,6 +27,7 @@
       <a href="distance.html">distance</a>
       <a href="music.html">music</a>
       <a href="qotd.html">question of the day</a>
+      <button type="button" id="themeToggle" class="nav-theme-link" aria-label="Switch to dark mode" title="Dark mode"><i class="bi bi-moon-fill"></i></button>
     </div>
   </nav>
 
