New note and style changes

--- a/notes.html
+++ b/notes.html
@@ -57,6 +57,10 @@
         <p class="note-date">2/20/2026</p>
         <p class="note-body">i love you so much, gonna miss u for this next month</p>
       </div>
+      <div class="note-item">
+        <p class="note-date">2/26/2026</p>
+        <p class="note-body">I love you and I can't wait to see you tomorrow.</p>
+      </div>
     </div>
   </main>
   <script src="js/shared.js"></script>
